criando a primeira aparencia visual do cabeçalho do jogo

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simplifica</title>
     <link rel="shortcut icon" href="Itens/lily.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/src/util/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="cabecalho">
+            <img id="life" src="/src/assets/life.png">
+            <span id="contador-vida">5</span>
+
+            <button>tarefas</button>
+        </div>
+    </header>
+
+    <script src="/src/util/app.js"></script>
 </body>
 </html>
