--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simplifica</title>
-    <link rel="shortcut icon" href="Itens/lily.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="src/assets/lily.ico" type="image/x-icon">
     <link rel="stylesheet" href="/src/util/style.css">
 </head>
 <body>
@@ -16,6 +16,15 @@
             <button>tarefas</button>
         </div>
     </header>
+    <main>
+        <div id="questoes" class="questoes">
+            <h2 id="pergunta"></h2>
+            <div id="opcoes-respostas"></div>
+        </div>
+        <div class="responder">
+            <button id="botao-proxima-pergunta" disabled>Próxima Pergunta</button>
+        </div>
+    </main>
 
     <script src="/src/util/app.js"></script>
 </body>
