--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Aplicativo de gamificação que busca promover a educação sobre tecnologia por meio de jogos interativos.">
     <title>Simplifica</title>
     <link rel="shortcut icon" href="src/assets/lily.ico" type="image/x-icon">
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="/src/util/style.css">
 </head>
 <body>
     <header>
         <div class="cabecalho">
-            <img id="life" src="/src/assets/life.png">
+            <img id="life" src="/src/assets/life.png" alt="vida">
             <span id="contador-vida">5</span>
 
             <button>tarefas</button>
