--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
             <img id="life" src="/src/assets/life.png" alt="vida">
             <span id="contador-vida">5</span>
 
-            <button>tarefas</button>
+           
         </div>
     </header>
     <main>
         <div id="questoes" class="questoes">
+          <div class="pergunta-container">  
             <h2 id="pergunta"></h2>
+        </div>
             <div id="opcoes-respostas"></div>
         </div>
         <div class="responder">
