Fazendo service-worker funcionar novamente e finalizando CSS
Restaurando função que fazia o service-worker funcionar corretamente, e implementando a finalização do CSS de forma que suporte diferentes tamanhos de telas. E ainda contando com mudanças nos botões e nas questões em si.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Simplifica</title>
     <link rel="shortcut icon" href="src/assets/lily.ico" type="image/x-icon">
     <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="/src/util/style.css">
+    <link rel="stylesheet" href="src/util/style.css">
 </head>
 <body>
     <header>
@@ -23,13 +23,14 @@
           <div class="pergunta-container">  
             <h2 id="pergunta"></h2>
         </div>
+    </div>
             <div id="opcoes-respostas"></div>
-        </div>
+        
         <div class="responder">
             <button id="botao-proxima-pergunta" disabled>Próxima Pergunta</button>
         </div>
     </main>
 
-    <script src="/src/util/app.js"></script>
+    <script src="src/util/app.js"></script>
 </body>
 </html>
